fix body pushed out on small screens

--- a/src/niall-paterson/partials/_layout.scss
+++ b/src/niall-paterson/partials/_layout.scss
@@ -116,7 +116,7 @@ article {
   .project-content {
     display: inline-block;
     margin: 0 $small-margin;
-    width: 100%;
+    width: 95%;
     li {
       margin: 0 $large-margin;
       line-height: 1.5;
